# openpiv-mcp

./: .dockerignore  .gitattributes  Dockerfile  README.md  README_HF.md  USAGE_QWEN.md  app.py  main.py  openpiv_client.py  pyproject.toml  requirements.txt  test_hf_client.py  test_hf_http_client.py
demo/test1/: exp1_001_a.tiff  exp1_001_b.tiff
src/: http_server.py  openpiv_mcp.py
tests/: test_client.py  test_piv_compute.py  test_quiver.py
