[project]
name = "openpiv-mcp"
version = "0.1.0"
description = "OpenPIV MCP server for PIV analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "numpy>=1.21.6,<2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.9.0",
    "setuptools>=82.0.1",
    "uvicorn>=0.30.0",
    "fastapi>=0.100.0",
    "openpiv",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
